[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/scroll.png" type="Texture" id=1]
[ext_resource path="res://source/components/scroll.gd" type="Script" id=2]

[node name="scroll" type="Node2D"]
z_index = 50
script = ExtResource( 2 )

[node name="prevent_mouse" type="ColorRect" parent="."]
visible = false
margin_left = -1280.0
margin_top = -720.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.192157, 0.192157, 0.192157, 0.282353 )

[node name="scroll_body" type="ColorRect" parent="."]
margin_left = -221.0
margin_right = 222.0
margin_bottom = 72.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 250, 36 )
rect_clip_content = true
color = Color( 0.890196, 0.733333, 0.560784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll_top" type="NinePatchRect" parent="."]
margin_left = -250.0
margin_top = -36.0
margin_right = 250.0
margin_bottom = 36.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 250, 36 )
texture = ExtResource( 1 )
region_rect = Rect2( 0.00215149, -0.128929, 325.186, 72.33 )
patch_margin_left = 29
patch_margin_right = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll_bottom" type="NinePatchRect" parent="."]
margin_left = -250.0
margin_top = 36.0
margin_right = 250.0
margin_bottom = 108.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 250, 36 )
texture = ExtResource( 1 )
region_rect = Rect2( 0.00215149, -0.128929, 325.186, 72.33 )
patch_margin_left = 29
patch_margin_right = 28
__meta__ = {
"_edit_use_anchors_": false
}
